--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -6,6 +6,9 @@ services:
       - postgres
     ports:
       - 8000:8000
+    volumes:
+      - ./:/usr/src/app:ro
+    command: uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload
     environment:
       - DATABASE_HOSTNAME=postgres
       - DATABASE_PORT=5432
