--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 alembic==1.7.5
 anyio==3.3.4
 asgiref==3.4.1
+attrs==21.2.0
 bcrypt==3.2.0
+certifi==2021.10.8
 cffi==1.15.0
+charset-normalizer==2.0.7
 click==8.0.3
 cryptography==35.0.0
 dnspython==2.1.0
@@ -15,25 +18,34 @@ httptools==0.2.0
 idna==3.3
 importlib-metadata==4.8.2
 importlib-resources==5.4.0
+iniconfig==1.1.1
 itsdangerous==2.0.1
 Mako==1.1.5
 MarkupSafe==2.0.1
 orjson==3.6.4
+packaging==21.3
 passlib==1.7.4
+pluggy==1.0.0
 psycopg2-binary==2.9.1
+py==1.11.0
 pyasn1==0.4.8
 pycparser==2.21
 pydantic==1.8.2
+pyparsing==3.0.6
+pytest==6.2.5
 python-dotenv==0.19.1
 python-jose==3.3.0
 python-multipart==0.0.5
+requests==2.26.0
 rsa==4.7.2
 six==1.16.0
 sniffio==1.2.0
 SQLAlchemy==1.4.27
 starlette==0.16.0
+toml==0.10.2
 typing-extensions==3.10.0.2
 ujson==4.2.0
+urllib3==1.26.7
 uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
