--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   job1:
     environment:
-      name: Testing
+      - name: Testing
     env: DATABASE_HOSTNAME= ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT=${{secrets.DATABASE_PORT}}
       DATABASE_PASSWORD=${{secrets.DATABASE_PASSWORD}}
